# GView

./: .clang-format  .gitignore  .gitmodules  .issuetracker  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  architecture.html  build.bat  build.sh  buildMac.sh  character_table.html  configuration.html  contributing.html  core.html  description.html  development.html  education.html  genindex.html  global_plugins.html  hashes.html  index.html  macho.html  objects.inv  plugin_development.html  prefetch.html  search.html  searchindex.js  security.html  specific_plugins.html  usage.html  vcpkg.json
3rdPartyLibs/LLVMDemangle/: CMakeLists.txt  version.txt
GView/: CMakeLists.txt  main.cpp
GView/include/: GViewApp.hpp
GView/src/: CMakeLists.txt  GView.cpp  Instance.cpp  main.cpp
GView/src/App/: CMakeLists.txt  FileWindow.cpp  Instance.cpp
GView/src/Type/: CMakeLists.txt  DefaultTypePlugin.cpp  Plugin.cpp  SimplePattern.cpp
GView/src/Utils/: CMakeLists.txt  Selection.cpp  Zone.cpp  ZonesList.cpp
GView/src/View/: BufferView.cpp  BufferViewBuilder.cpp  BufferViewer.cpp  Builder.cpp  CMakeLists.txt  Factory.cpp  GridViewer.cpp
GViewCore/: CMakeLists.txt
GViewCore/include/: GView.hpp  GViewInternal.hpp  Internal.hpp
GViewCore/src/: CMakeLists.txt  FileCache.cpp  main.cpp
GViewCore/src/App/: AboutWindow.cpp  CMakeLists.txt  ErrorDialog.cpp  FileWindow.cpp  FileWindowProperties.cpp  GViewApp.cpp  Instance.cpp  KeyConfiguratorWindow.cpp  OptionsWindow.cpp  QueryInterface.cpp  RestrictedModeWindow.cpp  SelectTypeDialog.cpp  TutorialWindow.cpp
GViewCore/src/Components/: CMakeLists.txt
GViewCore/src/Compression/: CMakeLists.txt  LZXPRESS.cpp
GViewCore/src/Decoding/: Base64.cpp  CMakeLists.txt  HTMLCharactersEncoding.cpp  HexCharactersToAscii.cpp  LZXPRESS.cpp  QuotedPrintable.cpp  VBSEncoding.cpp  XOREncoding.cpp  zip.cpp  zlib.cpp
GViewCore/src/DigitalSignature/: Authenticode.cpp  Authenticode.hpp  CMakeLists.txt  DigitalSignature.cpp
GViewCore/src/Dissasembly/: CMakeLists.txt  Dissasembly.cpp
GViewCore/src/Entropy/: CMakeLists.txt  Entropy.cpp
GViewCore/src/GenericPlugins/: CMakeLists.txt  Plugin.cpp
GViewCore/src/Go/: CMakeLists.txt  go.cpp
GViewCore/src/Hashes/: Adler32.cpp  CMakeLists.txt  CRC16.cpp  CRC32.cpp  CRC64.cpp  MD2.cpp  MD4.cpp  MD5.cpp  OpenSSL.cpp  SHA1.cpp  SHA256.cpp  SHA384.cpp  SHA512.cpp
GViewCore/src/Pyc/: CMakeLists.txt
GViewCore/src/Regex/: CMakeLists.txt  regex_wrapper.cpp
GViewCore/src/SQLite3/: CMakeLists.txt  sqlite3_wrapper.cpp
GViewCore/src/Security/: CMakeLists.txt  CryptoGView.cpp  RestrictedMode.cpp
GViewCore/src/Type/: CMakeLists.txt  DefaultTypePlugin.cpp  FolderViewPlugin.cpp  LineStartsWithMatcher.cpp  MagicMatcher.cpp  Matcher.cpp  Plugin.cpp  SimplePattern.cpp  SmartAssistantPlugin.cpp  StartsWithMatcher.cpp  TextParser.cpp
GViewCore/src/Unpack/: Base64.cpp  CMakeLists.txt  QuotedPrintable.cpp
GViewCore/src/Utils/: CMakeLists.txt  CharacterEncoding.cpp  CharacterSet.cpp  DataCache.cpp  Demangle.cpp  ErrorList.cpp  FileCache.cpp  GenericLexer.cpp  JsonBuilder.cpp  Selection.cpp  StringEncoding.cpp  Zone.cpp  ZonesList.cpp
GViewCore/src/View/: BufferViewBuilder.cpp  Builder.cpp  CMakeLists.txt  ViewControl.cpp
GViewCore/src/Yara/: CMakeLists.txt  yara_wrapper.cpp
GViewCore/src/ZIP/: CMakeLists.txt  zip.cpp
GViewCore/src/ZLIB/: CMakeLists.txt  zlib.cpp
GViewCore/src/include/: Internal.hpp
GenericPlugins/: CMakeLists.txt
GenericPlugins/CharacterTable/: CMakeLists.txt
GenericPlugins/CharacterTable/include/: CharacterTable.hpp
GenericPlugins/CharacterTable/src/: CMakeLists.txt  CharacterTable.cpp
GenericPlugins/Dropper/: CMakeLists.txt
GenericPlugins/Dropper/include/: Archives.hpp  Artefacts.hpp  Constants.hpp  Cryptographic.hpp  Dropper.hpp  DropperUI.hpp  Executables.hpp  HtmlObjects.hpp  IDrop.hpp  Images.hpp  Multimedia.hpp  SpecialStrings.hpp
GenericPlugins/Dropper/src/: Artefacts.cpp  CMakeLists.txt  Dropper.cpp  DropperUI.cpp
GenericPlugins/DropperStrings/: CMakeLists.txt
GenericPlugins/DropperStrings/include/: Dropper.hpp
GenericPlugins/DropperStrings/src/: CMakeLists.txt  Dropper.cpp
GenericPlugins/EntropyVisualizer/: CMakeLists.txt
GenericPlugins/EntropyVisualizer/include/: EntropyVisualizer.hpp
GenericPlugins/EntropyVisualizer/src/: CMakeLists.txt  EntropyVisualizer.cpp  Plugin.cpp
GenericPlugins/FileDownloader/: CMakeLists.txt
GenericPlugins/FileDownloader/include/: FileDownloader.hpp
GenericPlugins/FileDownloader/src/: CMakeLists.txt  FileDownloader.cpp
GenericPlugins/HashAnalyzer/: CMakeLists.txt
GenericPlugins/HashAnalyzer/include/: Config.hpp  HashAnalyzer.hpp  HttpClient.hpp  ServiceInterface.hpp  TestService.hpp  VirusTotalService.hpp
GenericPlugins/HashAnalyzer/src/: CMakeLists.txt  Config.cpp  HashAnalyzer.cpp  HttpClient.cpp  VirusTotalService.cpp
GenericPlugins/Hashes/: CMakeLists.txt
GenericPlugins/Hashes/include/: Hashes.hpp
GenericPlugins/Hashes/src/: CMakeLists.txt  Hashes.cpp
GenericPlugins/OnlineAnalytics/: CMakeLists.txt
GenericPlugins/OnlineAnalytics/include/: Hashing.hpp  OnlineAnalyticsUI.hpp
GenericPlugins/OnlineAnalytics/src/: CMakeLists.txt  Hashing.cpp  OnlineAnalyticsUI.cpp  Plugin.cpp
GenericPlugins/SyncCompare/: CMakeLists.txt
GenericPlugins/SyncCompare/include/: SyncCompare.hpp
GenericPlugins/SyncCompare/src/: CMakeLists.txt  SyncCompare.cpp
GenericPlugins/Unpacker/: CMakeLists.txt
GenericPlugins/Unpacker/include/: Unpacker.hpp
GenericPlugins/Unpacker/src/: CMakeLists.txt  Unpacker.cpp
GenericPlugins/Unpackers/: CMakeLists.txt
GenericPlugins/Unpackers/src/: CMakeLists.txt  Unpackers.cpp
GenericPlugins/Yara/: CMakeLists.txt
GenericPlugins/Yara/include/: Yara.hpp
GenericPlugins/Yara/src/: CMakeLists.txt  Yara.cpp
Libs/: CMakeLists.txt
Libs/include/: libs.hpp
Libs/src/: CMakeLists.txt
Types/PDF/: CMakeLists.txt
Types/PDF/include/: pdf.hpp
Types/PDF/src/: CMakeLists.txt  PDFDecoding.cpp  PDFFile.cpp  pdf.cpp  (+3 more)
Types/PE/: CMakeLists.txt  main.cpp
Types/ZIP/: CMakeLists.txt
(+621 files in other folders)
