add_subdirectory(Type)
add_subdirectory(GenericPlugins)
add_subdirectory(App)
add_subdirectory(Utils)
add_subdirectory(View)
add_subdirectory(Hashes)
add_subdirectory(DigitalSignature)
add_subdirectory(Compression)
add_subdirectory(Go)
add_subdirectory(ZLIB)
add_subdirectory(Dissasembly)
target_sources(GViewCore PRIVATE main.cpp)


